--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,22 +15,57 @@
     <%= stylesheet_link_tag    'application', media: 'all'%>
     <%= javascript_include_tag 'application' %>
 
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
-      <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
-        <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
-            <div class="site-logo"></div><span class="site-description">Material Design Portfolio</span></span></div>
-        <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
-          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="/home/index">Home</a><a class="mdl-navigation__link" href="/home/protfolio">Portfolio</a><a class="mdl-navigation__link" href="/home/about">About</a><a class="mdl-navigation__link" href="/home/contact">Contact</a>
-          </nav>
-        </div>
-      </header>
-    </div>
   </head>
 
   <body>
+
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
+    <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
+      <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
+            <div class="site-logo"></div>
+          <span class="site-description">Shall we go?</span></span></div>
+      <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+          <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
+          <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
+          <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
+          <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
+          <a class="mdl-navigation__link" href="/home/template5">My account</a>
+          <a class="mdl-navigation__link" href="/home/template6">Support</a>
+          <a class="mdl-navigation__link" href="/home/template7">Message</a>
+        </nav>
+      </div>
+    </header>
+  </div>
+
   <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
     <%= yield %>
   </body>
 </html>
 
+<style>
+  .site-navigation-row {
+    background-color: rgba(0, 0, 0, 0.08);
+    text-transform: uppercase;
+    height: 70px;
+  }
+  .site-navigation-row .mdl-navigation__link {
+    -ms-flex: 1;
+    flex: 1;
+    line-height: 100%;
+    color: #fff;
+  }
+  .site-description {
+    display: block;
+    font-size: 40px;
+    text-align: center;
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+  .site-content {
+    margin: 1em auto;
+    min-height: 580px;
+    background-image: url(https://i.ytimg.com/vi/2C-rNiw3Xao/maxresdefault.jpg);
+  }
+</style>
 
