inserted cdn, changing templete4

--- a/app/views/home/template4.html.erb
+++ b/app/views/home/template4.html.erb
@@ -1,149 +1,38 @@
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="contact.html" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
-  <main class="mdl-layout__content">
-    <div class="site-content">
-      <div class="container"><div class="mdl-grid site-max-width">
-        <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-          <div class="mdl-card__media">
-            <%= image_tag('portfolio1.jpg') %>
-
-          </div>
-          <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Rocky Peak</h2>
-          </div>
-          <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-          </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-            Learn More
-          </a>
-        </div>
-        </div>
-        <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-          <div class="mdl-card__media">
-            <%= image_tag('portfolio2.jpg') %>
-          </div>
-          <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Night Shadow</h2>
-          </div>
-          <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-          </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-            Learn More
-          </a>
-        </div>
-        </div>
-        <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-          <div class="mdl-card__media">
-            <%= image_tag('portfolio3.jpg') %>
-
-          </div>
-          <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Sky Reach</h2>
-          </div>
-          <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-          </div><br>        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-            Learn More
-          </a>
-        </div>
-        </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-          <%= image_tag('portfolio4.jpg') %>
-
-        </div>
-        <div class="mdl-card__title">
-          <h2 class="mdl-card__title-text">Pencil Tip</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-          Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-          Learn More
-        </a>
+<div class = "container">
+  <div class="col s12 m7">
+    <h2 class="header">Horizontal Card</h2>
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="https://lorempixel.com/100/190/nature/6">
       </div>
-      </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-          <%= image_tag('portfolio5.jpg') %>
-
+      <div class="card-stacked">
+        <div class="card-content">
+          <p>I am a very simple card. I am good at containing small bits of information.</p>
         </div>
-        <div class="mdl-card__title">
-          <h2 class="mdl-card__title-text">Magic Leaves</h2>
+        <div class="card-action">
+          <a href="#">This is a link</a>
         </div>
-        <div class="mdl-card__supporting-text">
-          Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-          Learn More
-        </a>
       </div>
-      </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-          <%= image_tag('portfolio6.jpg') %>
-        </div>
-        <div class="mdl-card__title">
-          <h2 class="mdl-card__title-text">Water Flow</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-          Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-          Learn More
-        </a>
-      </div>
-      </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-          <%= image_tag('portfolio7.jpg') %>
-        </div>
-        <div class="mdl-card__title">
-          <h2 class="mdl-card__title-text">Lonely Bridge</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-          Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-          Learn More
-        </a>
-      </div>
-      </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-          <%= image_tag('portfolio8.jpg') %>
-        </div>
-        <div class="mdl-card__title">
-          <h2 class="mdl-card__title-text">Busy Street</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-          Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-          Learn More
-        </a>
-      </div>
-      </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__media">
-          <%= image_tag('portfolio9.jpg') %>
-        </div>
-        <div class="mdl-card__title">
-          <h2 class="mdl-card__title-text">City Scape</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-          Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-        </div><br>        <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-          Learn More
-        </a>
-      </div>
-      </div>
-      </div></div>
     </div>
-    <footer class="mdl-mini-footer">
-      <div class="footer-container">
-        <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-        <ul class="mdl-mini-footer__link-list">
-          <li><a href="#">Privacy & Terms</a></li>
-        </ul>
+  </div>
+
+
+  <div class="row">
+    <form class="col s12">
+      <div class="row">
+        <div class="input-field col s6">
+          <input id="input_text" type="text" data-length="10">
+          <label for="input_text">Input text</label>
+        </div>
       </div>
-    </footer>
-  </main>
+      <div class="row">
+        <div class="input-field col s12">
+          <textarea id="textarea1" class="materialize-textarea" data-length="120"></textarea>
+          <label for="textarea1">Textarea</label>
+        </div>
+      </div>
+    </form>
+  </div>
+
 </div>
+            
