--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,31 +12,36 @@
     <link href="styles/main.css" rel="stylesheet">
     <%= csrf_meta_tags %>
 
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+
+
     <%= stylesheet_link_tag    'application', media: 'all'%>
     <%= javascript_include_tag 'application' %>
 
   </head>
 
-  <body>
-
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
-    <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
-      <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
+  <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
+    <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
             <div class="site-logo"></div>
           <span class="site-description">Shall we go?</span></span></div>
-      <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-          <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
-          <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
-          <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
-          <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
-          <a class="mdl-navigation__link" href="/home/template5">My account</a>
-          <a class="mdl-navigation__link" href="/home/template6">Support</a>
-          <a class="mdl-navigation__link" href="/home/template7">Message</a>
-        </nav>
-      </div>
-    </header>
-  </div>
+    <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
+      <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+        <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
+        <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
+        <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
+        <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
+        <a class="mdl-navigation__link" href="/home/template5">My account</a>
+        <a class="mdl-navigation__link" href="/home/template6">Support</a>
+        <a class="mdl-navigation__link" href="/home/template7">Message</a>
+      </nav>
+    </div>
+  </header>
+
+  <body>
 
   <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
     <%= yield %>
