--- a/app/views/home/protfolio.html.erb
+++ b/app/views/home/protfolio.html.erb
@@ -137,13 +137,31 @@
       </div>
       </div></div>
     </div>
-    <footer class="mdl-mini-footer">
-      <div class="footer-container">
-        <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-        <ul class="mdl-mini-footer__link-list">
-          <li><a href="#">Privacy & Terms</a></li>
-        </ul>
-      </div>
-    </footer>
   </main>
+
+  <!-- ICON, NAME AND DESCRIPTION -->
+  <div class="wow fadeInUp content-card">
+    <!-- REPLACE WITH YOUR APP URL -->
+    <a href="YOUR_APP_URL_HERE">
+      <paper-fab class="mobile-fab" icon="shop"></paper-fab>
+    </a>
+
+    <div class="icon-and-title-flex">
+      <%= image_tag('ic_launcher.png') %>
+      <div class="title-container">
+        <!-- REPLACE WITH YOUR APP NAME -->
+        <span class="text-title">AppSite</span>
+        <br><div class="intertext-padding"></div>
+        <!-- REPLACE WITH YOUR DEV NAME -->
+        <span class="text-subtitle">by Faiz Malkani</span>
+        <br><div class="intertext-padding"></div>
+        <!-- REPLACE WITH YOUR APP PRICE -->
+        <span class="text-subtitle">$1.99</span>
+      </div>
+    </div><br><br>
+    <!-- REPLACE WITH YOUR APP DESCRIPTION -->
+    <span class="text-description" style="font-size: 1.1em">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida tristique condimentum. Quisque tempus eleifend sollicitudin. Nulla congue in erat et euismod. Nulla pellentesque leo id dui tempor lobortis. Phasellus sollicitudin ut massa eu dictum. Pellentesque viverra a diam a feugiat. Morbi non lorem et ex finibus elementum. Morbi pharetra risus eget quam pellentesque, sed laoreet purus malesuada. Aenean ut nibh quis lacus mollis euismod. Maecenas pellentesque magna vehicula convallis hendrerit. Sed maximus urna sed suscipit facilisis. Aenean posuere, ligula quis fermentum vulputate, quam nisi pulvinar felis, et sodales ligula augue sit amet nunc. Curabitur eget orci et tortor rhoncus consequat et id nunc.
+    </span>
+  </div>
+
 </div>
