--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,21 +15,37 @@
     <%= stylesheet_link_tag    'application', media: 'all'%>
     <%= javascript_include_tag 'application' %>
 
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
-      <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
-        <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
-            <div class="site-logo"></div><span class="site-description">Material Design Portfolio</span></span></div>
-        <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
-          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="/home/index">Home</a><a class="mdl-navigation__link" href="/home/protfolio">Portfolio</a><a class="mdl-navigation__link" href="/home/about">About</a><a class="mdl-navigation__link" href="/home/contact">Contact</a>
-          </nav>
-        </div>
-      </header>
-    </div>
+
   </head>
 
   <body>
-  <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
+    <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
+      <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
+            <div class="site-logo"></div><span class="site-description">Material Design Portfolio</span></span></div>
+      <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+          <a class="mdl-navigation__link" href="/home/index">Home</a>
+          <a class="mdl-navigation__link" href="/home/protfolio">Portfolio</a>
+          <a class="mdl-navigation__link" href="/home/about">About</a>
+          <a class="mdl-navigation__link" href="/home/contact">Contact</a>
+        </nav>
+      </div>
+    </header>
+  </div>
+
     <%= yield %>
+
+  <footer class="mdl-mini-footer">
+    <div class="footer-container">
+      <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
+      <ul class="mdl-mini-footer__link-list">
+        <li><a href="#">Privacy & Terms</a></li>
+      </ul>
+    </div>
+  </footer>
+  <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
+
   </body>
 </html>
 
