--- a/app/views/home/template7.html.erb
+++ b/app/views/home/template7.html.erb
@@ -1,5 +1,22 @@
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
 
+  <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
+    <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
+            <div class="site-logo"></div>
+          <span class="site-description">Shall we go?</span></span></div>
+    <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
+      <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+        <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
+        <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
+        <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
+        <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
+        <a class="mdl-navigation__link" href="/home/template5">My account</a>
+        <a class="mdl-navigation__link" href="/home/template6">Support</a>
+        <a class="mdl-navigation__link" href="/home/template7">Message</a>
+      </nav>
+    </div>
+  </header>
+
   <main class="mdl-layout__content">
     <div class="site-content">
       <div class="container"><div class="mdl-grid site-max-width">
