--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,23 +24,6 @@
 
   </head>
 
-  <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
-    <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
-            <div class="site-logo"></div>
-          <span class="site-description">Shall we go?</span></span></div>
-    <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
-      <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-        <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
-        <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
-        <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
-        <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
-        <a class="mdl-navigation__link" href="/home/template5">My account</a>
-        <a class="mdl-navigation__link" href="/home/template6">Support</a>
-        <a class="mdl-navigation__link" href="/home/template7">Message</a>
-      </nav>
-    </div>
-  </header>
-
   <body>
 
   <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
@@ -70,7 +53,7 @@
   .site-content {
     margin: 1em auto;
     min-height: 580px;
-    background-image: url(https://i.ytimg.com/vi/2C-rNiw3Xao/maxresdefault.jpg);
+    /*background-image: url();*/
   }
 </style>
 
