--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,84 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Material Portfolio Template Demo</title>
-    <meta name="description" content="Demo of Material design portfolio template by TemplateFlip.com."/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" rel="stylesheet">
-    <link href="styles/main.css" rel="stylesheet">
-    <%= csrf_meta_tags %>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Material Portfolio Template Demo</title>
+  <meta name="description" content="Demo of Material design portfolio template by TemplateFlip.com."/>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" rel="stylesheet">
+  <link href="styles/main.css" rel="stylesheet">
+  <%= csrf_meta_tags %>
 
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 
 
-    <%= stylesheet_link_tag    'application', media: 'all'%>
-    <%= javascript_include_tag 'application' %>
+  <%= stylesheet_link_tag    'application', media: 'all'%>
+  <%= javascript_include_tag 'application' %>
 
-<<<<<<< HEAD
+</head>
 
-=======
->>>>>>> 0b68f5f7a84f618b717f891429c0235fcb082f4d
-  </head>
 
-  <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
-    <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
-            <div class="site-logo"></div>
-          <span class="site-description">Shall we go?</span></span></div>
-    <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
-      <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-        <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
-        <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
-        <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
-        <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
-        <a class="mdl-navigation__link" href="/home/template5">My account</a>
-        <a class="mdl-navigation__link" href="/home/template6">Support</a>
-        <a class="mdl-navigation__link" href="/home/template7">Message</a>
-      </nav>
-    </div>
-  </header>
 
-  <body>
-<<<<<<< HEAD
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
-    <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
-      <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
-            <div class="site-logo"></div><span class="site-description">Material Design Portfolio</span></span></div>
-      <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-          <a class="mdl-navigation__link" href="/home/index">Home</a>
-          <a class="mdl-navigation__link" href="/home/protfolio">Portfolio</a>
-          <a class="mdl-navigation__link" href="/home/about">About</a>
-          <a class="mdl-navigation__link" href="/home/contact">Contact</a>
-        </nav>
-      </div>
-    </header>
-  </div>
+<body>
+<%= yield %>
 
-=======
-
-  <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
->>>>>>> 0b68f5f7a84f618b717f891429c0235fcb082f4d
-    <%= yield %>
-
-  <footer class="mdl-mini-footer">
-    <div class="footer-container">
-      <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-      <ul class="mdl-mini-footer__link-list">
-        <li><a href="#">Privacy & Terms</a></li>
-      </ul>
-    </div>
-  </footer>
-  <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
-
-  </body>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+<script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
+</body>
 </html>
 
 <style>
@@ -101,9 +52,8 @@
     margin-bottom: 10px;
   }
   .site-content {
-    margin: 1em auto;
+    margin: auto;
     min-height: 580px;
     background-image: url(https://i.ytimg.com/vi/2C-rNiw3Xao/maxresdefault.jpg);
   }
 </style>
-
