--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,22 +15,18 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+
 
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <%= javascript_include_tag 'application' %>
 
 </head>
 
-
-<<<<<<< HEAD
-
 <body>
-<%= yield %>
-=======
-  <body>
->>>>>>> a3e84ed341e9d2ebb94e337a328cfbb55cbc8a33
 
-<!-- Compiled and minified JavaScript -->
+<%= yield %>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
 </body>
@@ -56,8 +52,8 @@
     margin-bottom: 10px;
   }
   .site-content {
-    margin: auto;
+    margin: 1em auto;
     min-height: 580px;
-    /*background-image: url();*/
+    background-image: url(https://i.ytimg.com/vi/2C-rNiw3Xao/maxresdefault.jpg);
   }
 </style>
