--- a/app/views/home/template4.html.erb
+++ b/app/views/home/template4.html.erb
@@ -103,6 +103,31 @@
   .mdl-color--teal-100 {
     background-color: rgba(255, 255, 255, 0.26) !important;
   }
+  .mdl-color--teal-100 {
+     background-color: #ffffff !important;
+  }
+  .row .col.s3 {
+    width: 25%;
+    margin-left: auto;
+    left: auto;
+    right: auto;
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
+    background-color: white;
+    height: 200px;
+    text-align: center;
+    padding-top : 10px;
+  }
+  .row .col.s9 {
+    width: 75%;
+    margin-left: auto;
+    left: auto;
+    right: auto;
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
+    background-color: white;
+    height: 200px;
+    text-align: center;
+    padding-top : 10px;
+  }
 
 </style>
 
