--- a/app/views/home/template5.html.erb
+++ b/app/views/home/template5.html.erb
@@ -20,47 +20,131 @@
   <main class="mdl-layout__content">
     <div class="site-content">
       <div class="mdl-grid site-max-width">
+        <div class="row">
         <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp page-content">
-          <div class="mdl-card__title">
-            <h1 class="mdl-card__title-text">Portfolio Page</h1>
-          </div>
-          <%= image_tag('portfolio-header.jpg') %>
+
         </div>
-        <div class="mdl-grid site-copy">
-          <div class="mdl-cell mdl-cell--12-col"><p><h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3></p>
-            <div class="mdl-cell mdl-cell--10-col mdl-card__supporting-text no-padding ">
-              <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-            </div>
 
 
-            <div class="mdl-grid">
-              <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Design</h3>
-              <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding ">
-                <p>
-                  Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-                </p>
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s6">
+                <input id="first_name" type="text" class="validate">
+                <label for="first_name">First Name</label>
               </div>
-              <div class="mdl-cell mdl-cell--6-col">
-                <%= image_tag('portfolio4.jpg') %>
+              <div class="input-field col s6">
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
               </div>
-            </div>
 
-            <div class="mdl-grid">
-              <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Product</h3>
-              <div class="mdl-cell mdl-cell--9-col mdl-card__supporting-text no-padding ">
-                <p>
-                  Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-                </p>
-              </div>
-              <div class="mdl-cell mdl-cell--3-col mdl-card__supporting-text no-padding ">
-                <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#">View<span class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span></a>
+            </div>
+          </form>
+
+            <!--<div class="row">-->
+              <!--<div class="input-field col s12">-->
+                <!--<input disabled value="I am not editable" id="disabled" type="text" class="validate">-->
+                <!--<label for="disabled">Disabled</label>-->
+              <!--</div>-->
+            <!--</div>-->
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="password" type="password" class="validate">
+                <label for="password">Password</label>
               </div>
             </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
+            </div>
+            <!--<div class="row">-->
+              <!--<div class="col s12">-->
+                <!--This is an inline input field:-->
+                <!--<div class="input-field inline">-->
+                  <!--<input id="email" type="email" class="validate">-->
+                  <!--<label for="email" data-error="wrong" data-success="right">Email</label>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
+            <div class="row">
+              <div class="input-field col s6">
+                <i class="material-icons prefix">phone</i>
+                <input id="icon_telephone" type="tel" class="validate">
+                <label for="icon_telephone">Telephone</label>
+              </div>
+            </div>
+          <div class ="row">
+          <label>Country</label>
+          <select class="browser-default">
+            <option value="" disabled selected>Choose your country</option>
+            <option value="1">Option 1</option>
+            <option value="2">Option 2</option>
+            <option value="3">Option 3</option>
+          </select>
           </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <textarea id="textarea1" class="materialize-textarea"></textarea>
+                <label for="textarea1">Textarea</label>
+              </div>
+            </div>
+
+            <div class="input-field col s12">
+              <input type="date" class="datepicker">
+              <form action="#">
+                <div class="file-field input-field">
+                  <div class="btn">
+                    <span>File</span>
+                    <input type="file">
+                  </div>
+                  <div class="file-path-wrapper">
+                    <input class="file-path validate" type="text">
+                  </div>
+                </div>
+              </form>
+            </div>
+
+            <div class="row">
+              <div class="input-field col s12">
+
+              <textarea id="textarea1" class="materialize-textarea" data-length="120"></textarea>
+              <label for="textarea1">자기 소개</label>
+              </div>
+
+            </div>
         </div>
+
+
+
+
+
+
+
+
+
+
       </div>
     </div>
 
   </main>
 </div>
+
+<style>
+  .page-content {
+    padding-bottom: 2em;
+    background-color: #fff;
+    border: 3px #c7c0c0 solid;
+    width: 200px;
+    height: 200px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    margin: 0px auto;
+    background: url(/assets/portfolio-header-8a61a876bae0ce6c299c1a5cb17c9cbb64bc7dc6ecf1a61028554ef5d6f6e566.jpg);
+    background-size: cover;
+    출처: http:// dpfmth.tistory.com/200 [에르소의 Design & IT 트렌드];
+  }
+    row{
+      width:100%;
+    }
+</style>
