--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,6 @@
   .site-content {
     margin: 1em auto;
     min-height: 580px;
-    background-image: url(https://i.ytimg.com/vi/2C-rNiw3Xao/maxresdefault.jpg);
+    /*background-image: url(https://i.ytimg.com/vi/2C-rNiw3Xao/maxresdefault.jpg);*/
   }
 </style>
