--- a/app/views/home/template2.html.erb
+++ b/app/views/home/template2.html.erb
@@ -26,132 +26,109 @@
 
   <main class="mdl-layout__content">
     <div class="site-content">
-      <div class="container"><div class="mdl-grid site-max-width">
-        <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp welcome-card portfolio-card">
+
+
+      <div class="mdl-grid site-max-width">
+        <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp page-content">
           <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Welcome</h2>
+            <h1 class="mdl-card__title-text">외국인 소개</h1>
           </div>
-          <div class="mdl-card__supporting-text">
-            Demo of Material Design Portfolio Template by TemplateFlip. Click on &quot;Download&quot; button below to download the template.
+          <div class="mdl-card__media"><div class="slider">
+            <ul class="slides">
+              <li>
+                <%= image_tag('614678.jpg') %>
+              </li>
+              <li>
+                <%= image_tag('portfolio2.jpg') %>
+              </li>
+              <li>
+                <%= image_tag('portfolio3.jpg') %>
+              </li>
+              <li>
+                <%= image_tag('portfolio4.jpg') %>
+              </li>
+            </ul>
+          </div></div>
+          <div class="mdl-grid site-copy" id="mdl-grid">
+            <div class="mdl-cell mdl-cell--12-col">
+              <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
+              <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
+                <p>프로필 내용</p>
+              </div>
+
+
+              <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">원하는 테마</h3>
+              <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
+                <p>어떤 테마</p>
+              </div>
+
+
+              <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">기본 정보</h3>
+              <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
+                <p> 테마</p>
+              </div>
+            </div>
+
           </div>
-          <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href=" https://templateflip.com/templates/material-portfolio/" target="_blank">
-              Download
-            </a>
+
+          <div class="mdl-grid__footer">
+            <a class="waves-effect waves-light btn">Hang-out Suggest</a>
           </div>
         </div>
       </div>
 
-        <section class="section--center mdl-grid site-max-width">
-          <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white  mdl-shadow--4dp">
-            <i class="material-icons">play_circle_filled</i>
-          </header>
-          <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp">
-            <div class="mdl-card__title">
-              <h2 class="mdl-card__title-text">Introduction</h2>
-            </div>
-            <div class="mdl-card__supporting-text">
-              Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions.
-            </div>
-            <div class="mdl-card__actions  mdl-card--border">
-              <a href="#" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent">Watch Intro</a>
-            </div>
-          </div>
-        </section>
-        <section class="section--center mdl-grid site-max-width">
-          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-            <div class="mdl-card__media">
-              <%= image_tag('portfolio1.jpg') %>
-            </div>
-            <div class="mdl-card__title">
-              <h2 class="mdl-card__title-text">Rocky Peak</h2>
-            </div>
-            <div class="mdl-card__supporting-text">
-              Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
-            </div>
-          </div>
-          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-            <div class="mdl-card__media">
-              <%= image_tag('portfolio2.jpg') %>
-            </div>
-            <div class="mdl-card__title">
-              <h2 class="mdl-card__title-text">Night Shadow</h2>
-            </div>
-            <div class="mdl-card__supporting-text">
-              Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
-            </div>
-          </div>
-          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-            <div class="mdl-card__media">
-              <%= image_tag('portfolio3.jpg') %>
-            </div>
-            <div class="mdl-card__title">
-              <h2 class="mdl-card__title-text">Sky Reach</h2>
-            </div>
-            <div class="mdl-card__supporting-text">
-              Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
-            </div>
-          </div>
-        </section>
-
-        <section class="section--center mdl-grid site-max-width homepage-portfolio">
-          <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio.html">View Portfolio</a>
-        </section>
-
-        <div class="homepage-footer">
-          <section class="mdl-grid site-max-width">
-            <div class="mdl-cell mdl-card mdl-cell--8-col mdl-cell--4-col-tablet  mdl-shadow--4dp portfolio-card">
-              <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Testimonials</h2>
-              </div>
-              <ul class="demo-list-three mdl-list">
-                <li class="mdl-list__item mdl-list__item--three-line">
-              <span class="mdl-list__item-primary-content">
-                <i class="material-icons mdl-list__item-avatar">person</i>
-                <span>Amazing people, always ready to help!</span>
-                <span class="mdl-list__item-text-body">
-                  Bryan Cranston, CEO, Amazing.com
-                </span>
-              </span>
-                </li>
-                <li class="mdl-list__item mdl-list__item--three-line">
-              <span class="mdl-list__item-primary-content">
-                <i class="material-icons  mdl-list__item-avatar">person</i>
-                <span>Awesome work, they can do almost anything..</span>
-                <span class="mdl-list__item-text-body">
-                Aaron Paul, Marketing Lead, Awesome.com
-                </span>
-              </span>
-                </li>
-              </ul>
-            </div>
-            <div class="demo-card-event mdl-cell mdl-card mdl-shadow--4dp event-card portfolio-card">
-              <div class="mdl-card__title mdl-card--expand">
-                <h4>
-                  Featured event:<br>
-                  Community Meetup
-                  May 24, 2018<br>
-                  7-11pm
-                </h4>
-              </div>
-              <div class="mdl-card__actions mdl-card--border">
-                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent">
-                  Add to Calendar
-                </a>
-                <div class="mdl-layout-spacer"></div>
-                <i class="material-icons">event</i>
-              </div>
-            </div>
-          </section>
-        </div></div>
+      <footer class="mdl-mini-footer">
+        <div class="footer-container">
+          <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
+          <ul class="mdl-mini-footer__link-list">
+            <li><a href="#">Privacy & Terms</a></li>
+          </ul>
+        </div>
+      </footer>
     </div>
-    <footer class="mdl-mini-footer">
-      <div class="footer-container">
-        <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-        <ul class="mdl-mini-footer__link-list">
-          <li><a href="#">Privacy & Terms</a></li>
-        </ul>
-      </div>
-    </footer>
   </main>
 </div>
+
+<style>
+  #mdl-grid {
+    margin: 0;
+  }
+  .mdl-grid__footer {
+    text-align: right;
+    margin-right: 5%;
+  }
+  .mdl-card__media {
+    background-color: rgba(255, 64, 129, 0);
+  }
+  .slider .indicators .indicator-item {
+    background-color: #666666;
+    border: 3px solid #ffffff;
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  }
+  .slider .indicators .indicator-item.active {
+    background-color: #ffffff;
+  }
+  .slider {
+    width: 45%;
+    margin: 0 auto;
+  }
+  .slider .indicators {
+    bottom: 60px;
+    z-index: 100;
+    /* text-align: left; */
+  }
+  .slider .slides li img {
+    border-radius: 100%;
+  }
+  .slider .slides {
+    background-color: rgba(158, 158, 158, 0);
+  }
+</style>
+
+<script>
+    $(document).ready(function(){
+        $('.slider').slider();
+    });
+</script>
