--- a/app/views/home/template3.html.erb
+++ b/app/views/home/template3.html.erb
@@ -26,42 +26,45 @@
 
   <main class="mdl-layout__content">
     <div class="site-content">
-      <div class="container">
-        <div class="slider">
-          <ul class="slides">
-            <li>
-              <%= image_tag('614678.jpg') %>
-              <div class="caption center-align">
-                <h3>This is our big Tagline!</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-              </div>
-            </li>
-            <li>
-              <%= image_tag('portfolio2.jpg') %>
-              <div class="caption left-align">
-                <h3>Left Aligned Caption</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-              </div>
-            </li>
-            <li>
-              <%= image_tag('portfolio3.jpg') %>
-              <div class="caption right-align">
-                <h3>Right Aligned Caption</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-              </div>
-            </li>
-            <li>
-              <%= image_tag('portfolio4.jpg') %>
-              <div class="caption center-align">
-                <h3>This is our big Tagline!</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-              </div>
-            </li>
-          </ul>
+      <section class="mdl-grid site-max-width">
+        <div class="mdl-cell mdl-card mdl-cell--8-col mdl-cell--4-col-tablet  mdl-shadow--4dp portfolio-card">
+          <div class="slider">
+            <ul class="slides">
+              <li>
+                <%= image_tag('614678.jpg') %>
+              </li>
+              <li>
+                <%= image_tag('portfolio2.jpg') %>
+              </li>
+              <li>
+                <%= image_tag('portfolio3.jpg') %>
+              </li>
+              <li>
+                <%= image_tag('portfolio4.jpg') %>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+        <div class="demo-card-event mdl-cell mdl-card mdl-shadow--4dp event-card portfolio-card">
+          <div class="mdl-card__title mdl-card--expand">
+
+          </div>
+        </div>
+      </section>
+
+      <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp welcome-card portfolio-card">
+        <div class="mdl-card__title">
+          <h2 class="mdl-card__title-text">Welcome</h2>
+        </div>
+        <div class="mdl-card__supporting-text">
+          <p>지도 설명</p>
         </div>
       </div>
 
-
+      <div class="site-max-button">
+        <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#">Join</a>
+      </div>
     </div>
 
     <footer class="mdl-mini-footer">
@@ -74,3 +77,45 @@
     </footer>
   </main>
 </div>
+
+<style>
+  .site-max-width {
+    height: 400px;
+  }
+  .site-max-width {
+    max-width: 1040px;
+  }
+  .mdl-cell--12-col, .mdl-cell--12-col-desktop.mdl-cell--12-col-desktop {
+    margin: 1em auto;
+    max-width: 1000px;
+  }
+  .site-max-button {
+    padding: 50px;
+    text-align: center;
+    height: 100px;
+  }
+  .slider .indicators .indicator-item {
+    background-color: #666666;
+    border: 3px solid #ffffff;
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  }
+  .slider .indicators .indicator-item.active {
+    background-color: #ffffff;
+  }
+  .slider .indicators {
+    bottom: 60px;
+    z-index: 100;
+    /* text-align: left; */
+  }
+  .slider .slides {
+    background-color: rgba(158, 158, 158, 0);
+  }
+</style>
+
+<script>
+    $(document).ready(function(){
+        $('.slider').slider();
+    });
+</script>
